2010-02-22  Michiel Roos  <michiel@netcreators.com>

	* Updated the manual

2010-02-20  Michiel Roos  <michiel@netcreators.com>

	* Feature #3286: Enable usage of value 'reg1' from cache pages (Thanks to Alienor.net)

2010-02-19  Michiel Roos  <michiel@netcreators.com>

	* Feature #4179: Create gzipped versions of cache files (Thanks to Steffen Gebert)
	* Fixed bug #5290: nc_staticfilecache caches contents of https pages! (Thanks to Stefan Galinski)
	* Fixed bug #6525: EM refers to cc_devlog (Thanks to Steffen Gebert)

2010-02-17  Michiel Roos  <michiel@netcreators.com>

	* Fixed bug #6504: port based installations doesn't work (Thanks to Stefan Galinski)

2010-01-30  Michiel Roos  <michiel@netcreators.com>

	* Change: Show original URI on hover in infomodule

2010-01-22  Michiel Roos  <michiel@netcreators.com>

	* Fixed bug #6158: Scheduler tasks: missing ext_autoload (Thanks to Peter Schuster)

2010-01-14  Michiel Roos  <michiel@netcreators.com>

	* Fixed bug #4715: List what element are of INT type. (Thanks to Mads Jensen)
	* Added feature #6026: Provide scheduler tasks (Thanks to Michael Klapper)

2010-01-14  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: tx_ncstaticfilecache::processDirtyPages() removes entries from diry queue even if the processing did not succeed

2009-08-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Method tx_ncstaticfilecache::deleteStaticCacheDirectory() is protected but should be public

2009-08-13  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Current page Id is not outputted in form of backend info module

2009-08-10  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Visualization of tree in backend info module
	* Fixed bug: Visaulization does not depend on selected page of real page branch in backend info module
	* Fixed bug: Markup is incorrect on rendering the table in the backend info module
	* Fixed bug: Expanding/collapsing did not stay at the selected page in the backend info module
